# sysmon-web

./: Cargo.toml  build.rs  sysmon_web.proto
dashboard/: package-lock.json  package.json  tsconfig.json
dashboard/app/: layout.tsx  page.tsx  plot.tsx  util.ts
dashboard/app/proto/: msg.d.ts  msg.js
src/: main.rs  proc.rs
