[package]
name = "sysmon-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = { version = "0.3", default-features = false }
prost-types = "0.11"
bytes = "1.4.0"
prost = "0.11"
procfs = "0.15.1"


[build-dependencies]
prost-build = { version = "0.11" }
